CLIENT-1062: iPad orderbook scroll and overflow fix

--- a/src/modules/dex/directives/layout/layout.less
+++ b/src/modules/dex/directives/layout/layout.less
@@ -728,6 +728,7 @@ html body.dex-demo .notifications {
         }
 
         w-dex-layout-side-bar-toggle[side="left"] {
+          width: 0;
           .dex-layout {
             &__sidebar-toggle {
               left: -19px;
